--- a/Unsolved/style.css
+++ b/Unsolved/style.css
@@ -4,25 +4,43 @@ main {
     color: #fff;
     padding:5px;
     display:grid;
-    grid-template-columns: repeat(5, 1fr);
+    /* grid-template-columns: repeat(5, 1fr); */
+    grid-template-rows: repeat(9, 1fr);
     grid-gap: 2px;
+    font-family: 'Montserrat';
+    font-weight: bold;
+    text-align: center;
+    line-height: 40px;
 }
-.box-1 {
+.one{
     background-color: red;
-    color: white;
-    text-align: vertical center;
+    color: white;;
+
 }
-.box-3 {
+.three {
     background-image: url(images/tie.png);
 }
-.box-4 {
-    background-image: url(images/sign.jpg);  
+.four {
+    background-image: url(images/sign.jpg); 
 }
-.box-6 {
+.six{
     background-image: url(images/moped.jpg);
 }
+.seven{
+    background-image: url(images/sax.jpg);
+}
+.eight{
+    background-image: url(images/light.jpg);
+}
+.nine{
+    background-image: url(images/flower.jpg);
+}
+.ten{
+    background-color: turquoise;
+    color:white;
+}
 
-.box-2, .box-5{
+.thick{
 grid-column: span 3;
 grid-row: span 2;
 background-color: turquoise;
@@ -30,21 +48,51 @@ color: white;
 text-align: center;
 }
 
-.box-1, .box-4 {
+.thin{
     grid-column: span 2;
-grid-row: span 2;
+    grid-row: span 2;
 }
 
-.box-3, .box-6 {
+.wide {
 grid-column: span 5;
+grid-row: span 1;
 }
 
-.hidden-xs {
-    display:none;
-}
 @media only screen and (min-width: 600px) {
    
-   main {
+   .hidden-xs {
     display: initial;
-   
+   }
+main {
+display:grid;
+grid-template-columns: repeat(5,1fr);
+grid-template-rows: repeat(4, 1fr);
+max-width:100%;
+grid-gap:2px;
+}
+.one {
+    grid-column-start: 1;
+    grid-column-end: 1;
+
+}
+.four {
+    grid-column-start: 5;
+}
+.thick {
+    grid-column: span 1;
+    grid-row: span 2;
+}
+.wide {
+    grid-column: span 2;
+    grid-row: span 2;
+}
+.eight, .nine {
+    grid-
+}
+.ten {
+    grid-column-start: 5;
+    grid-row-start: 4;
+
+    
+}
 }
