--- a/Unsolved/style.css
+++ b/Unsolved/style.css
@@ -1,67 +1,82 @@
 body {
-    height: 100vh
+    height: 100vh;
+    font-family: 'Montserrat';
+    color: white;
+    border: 20px solid rgb(47, 30, 32);
+    background-color: rgb(47, 30, 32);
+}
+
+strong {
+    font-weight: 800;
 }
 
 main {
-    background-color: black;
-    color: #fff;
     padding: 5px;
-    grid-gap: 2px;
+    grid-gap: 5px;
     display: grid;
-    font-family: 'Montserrat';
-    font-weight: bold;
-    text-align: center;
-    line-height: 40px;
-    
+}
+
+.text-box {
+    display: flex;
+    align-items: center;
+    line-height: 2em;
+    padding: 30px 10px;
+    overflow: hidden;
+    font-size: 10pt;
 }
 
 .one {
     background-color: red;
-    color: white;
+    justify-content: center;
+    font-weight: 800;
+    font-size: 1.5em;
 }
 
 .two,
 .five {
-    background-color: turquoise;
-    color: white;
-    text-align: center;
+    background-color: rgb(104, 178, 156);
 }
 
 .three {
     background-image: url(images/tie.png);
+    background-position: center;
     grid-column: span 2;
 }
 
 .four {
     background-image: url(images/sign.jpg);
+    background-position: center;
 }
 
 .six {
     background-image: url(images/moped.jpg);
+    background-position: center;
     grid-column: span 2;
 }
 
 .seven {
-    background-image: url(images/sax.jpg);
+    background-image: url(images/light.jpg);
+    background-position: center;
 }
 
 .eight {
-    background-image: url(images/light.jpg);
+    background-color: rgb(104, 178, 156);
 }
 
 .nine {
-    background-image: url(images/flower.jpg);
+    background-image: url(images/sax.jpg);
+    background-position: center;
 }
 
 .ten {
-    background-color: turquoise;
-    color: white;
+    background-image: url(images/flower.jpg);
+    background-position: center;
 }
 
 @media (max-width: 600px) {
     main {
-        grid-template-columns: 1fr 2 fr;
-        grid-template-rows: repeat(10, 100px);
+        grid-template-columns: 1fr 2fr;
+        grid-template-rows: repeat(6, minmax(100px, auto));
     }
     .one,
     .two,
@@ -74,15 +89,14 @@ main {
 @media only screen and (min-width: 600px) {
     main {
         grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: 100px 100px 100px;
+        grid-template-rows: repeat(4, minmax(150px, auto));
     }
     .two,
     .three,
     .four,
     .five,
     .six,
-    .eight
- {
+    .eight {
         grid-row: span 2;
     }
 }
